--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -1,18 +1,17 @@
 *::-webkit-scrollbar
 {
-  width: 12px;
+  width: 10px;
 }
 
 *::-webkit-scrollbar-track
 {
-  background: @gray;
+  background: rgba(0, 0, 0, 0.08);
 }
 
 *::-webkit-scrollbar-thumb
 {
   background-color: #1F1E1E;
   border-radius: 20px;
-  border: 3px solid rgb(255, 255, 255);
 }
 
 html, body
